# model/google_maps.go
@@ -1,7 +1,7 @@
 package model
 
 // GoogleMaps model
-// swagger:model
+// swagger:model googleMaps
 type GoogleMaps struct {
 	EmbedMap  string `json:"embedMap"`
 	ShareLink string `json:"ShareLink"`
